# CodeBlocks

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
code_blocks/: analyzer.py  graphviz_visualizer.py  lsp_client.py  lsp_server.py  main.py  parser.py  resolver.py  types.py
examples/black/: code_blocks.gv
examples/code_blocks/: code_blocks.gv
examples/one_file/: code_blocks.gv  file.py
examples/three_files/: code_blocks.gv  file_one.py  file_three.py  file_two.py
examples/two_files/: code_blocks.gv  file_one.py  file_two.py
tests/: test_analyzer.py  test_parser.py  test_resolver.py
