[tool.poetry]
name = "code_blocks"
version = "0.1.0"
description = "Show a graphic representation of the code in a Python project."
authors = ["Tom Selfin <selfint@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sansio-lsp-client = "^0.10.0"
graphviz = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
